--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -11,7 +11,9 @@ libdialogs_la_SOURCES   = editmapparam.cpp cargowidget.cpp selectionwindow.cpp f
                           
 libdialogs_la_LIBADD    = @SDL_LIBS@ 
 
-libgamedialogs_la_SOURCES   = cargodialog.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp attackpanel.cpp vehicletypeselector.cpp nextcampaignmap.cpp editplayerdata.cpp
+libgamedialogs_la_SOURCES   = cargodialog.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp attackpanel.cpp vehicletypeselector.cpp nextcampaignmap.cpp \
+                              editplayerdata.cpp buildingtypeselector.cpp
+                              
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
 
 libmapeddialogs_la_SOURCES   = cargoeditor.cpp cargowidget.cpp eventeditor.cpp newmap.cpp
