Fixed crash in fullscreen mode

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -511,6 +511,9 @@
 					RelativePath="..\..\..\dialogs\attackpanel.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\dialogs\buildingtypeselector.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\dialogs\cargodialog.cpp">
 				</File>
 				<File
