New research dialog

--- a/source/dialogs/Makefile.am
+++ b/source/dialogs/Makefile.am
@@ -12,7 +12,7 @@ libdialogs_la_SOURCES   = editmapparam.cpp cargowidget.cpp selectionwindow.cpp f
 libdialogs_la_LIBADD    = @SDL_LIBS@ 
 
 libgamedialogs_la_SOURCES   = cargodialog.cpp unitcounting.cpp cargowidget.cpp ammotransferdialog.cpp attackpanel.cpp vehicletypeselector.cpp nextcampaignmap.cpp \
-                              editplayerdata.cpp buildingtypeselector.cpp
+                              editplayerdata.cpp buildingtypeselector.cpp choosetech.cpp
                               
 libgamedialogs_la_LIBADD    = @SDL_LIBS@ 
 
