--- a/source/tools/win/mount.vcproj
+++ b/source/tools/win/mount.vcproj
@@ -94,7 +94,7 @@
 				AdditionalDependencies="sdl.lib libbzip2.lib tools.lib"
 				OutputFile="$(OutDir)/bin/mount.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(SDL)/lib;$(OutDir)/lib"
+				AdditionalLibraryDirectories="&quot;$(SDL)/VisualC/SDL/Release&quot;;&quot;$(OutDir)/lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/bin/mount.pdb"
 				OptimizeReferences="2"
