Added support for compressed audio files through SDL_sound

--- a/source/sdl/Makefile.am
+++ b/source/sdl/Makefile.am
@@ -7,7 +7,7 @@ AM_CFLAGS   = @SDL_CFLAGS@
 noinst_LTLIBRARIES	= libsdl.la
 
 libsdl_la_SOURCES 	= sound.cpp graphics.cpp events.cpp 
-libsdl_la_LIBADD	= @SDL_LIBS@ -lSDL_image -lSDL_mixer -ljpeg
+libsdl_la_LIBADD	= @SDL_LIBS@ -lSDL_image -lSDL_mixer -ljpeg -lSDL_sound
 
 
 
