--- a/configure.in
+++ b/configure.in
@@ -151,6 +151,14 @@ SDL_mixer.RPM installed, perhaps the SDL_mixer-devel.RPM is missing.
 If your distribution does not include the SDL_image library, you can get it 
 from http://www.libsdl.org/projects/SDL_mixer/ ]]))
 
+AC_CHECK_LIB( SDL_sound,
+              Sound_Init,,
+         AC_MSG_ERROR( [[
+ASC requires the SDL_sound library. If you have a distribution supplied
+SDL_sound package installed, perhaps the SDL_sound-devel package is missing.
+If your distribution does not include the SDL_sound library, you can get it
+from http://www.icculus.org/SDL_sound/ ]]))
+
 
 #AC_MSG_CHECKING("SDL_mixer.h")
 #AC_TRY_COMPILE( [#include <SDL_mixer.h>],[return 0;],
