--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -421,6 +421,9 @@
 				RelativePath="..\..\..\unitctrl.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\unitset.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\vehicle.cpp">
 			</File>
 			<File
