--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -380,6 +380,9 @@
 				RelativePath="..\..\..\typen.cpp">
 			</File>
 			<File
+				RelativePath="..\..\..\unitset.cpp">
+			</File>
+			<File
 				RelativePath="..\..\..\vehicle.cpp">
 			</File>
 			<File
