--- a/source/libs/paragui/src/widgets/Makefile.in
+++ b/source/libs/paragui/src/widgets/Makefile.in
@@ -57,7 +57,8 @@ am_libpgwidgets_la_OBJECTS = pgbutton.lo pgcheckbutton.lo \
 	pgspinnerbox.lo pgthemewidget.lo pgwidget.lo pgwidgetdnd.lo \
 	pgwidgetlist.lo pgscrollwidget.lo pgwindow.lo pgrichedit.lo \
 	pgscrollarea.lo pgmenubar.lo pgmultilineedit.lo \
-	propstrings_priv.lo pgtooltiphelp.lo pgpropertyeditor.lo
+	propstrings_priv.lo pgtooltiphelp.lo pgpropertyeditor.lo \
+	pgcolorselector.lo
 libpgwidgets_la_OBJECTS = $(am_libpgwidgets_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -120,6 +121,7 @@ FFLAGS = @FFLAGS@
 FREETYPE_LIBS = @FREETYPE_LIBS@
 GENCL = @GENCL@
 GENCLL = @GENCLL@
+GREP = @GREP@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
@@ -165,13 +167,9 @@ SIGC_CFLAGS = @SIGC_CFLAGS@
 SIGC_LIBS = @SIGC_LIBS@
 STRIP = @STRIP@
 VERSION = @VERSION@
-ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
 ac_ct_F77 = @ac_ct_F77@
-ac_ct_RANLIB = @ac_ct_RANLIB@
-ac_ct_STRIP = @ac_ct_STRIP@
-ac_pt_PKG_CONFIG = @ac_pt_PKG_CONFIG@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
@@ -189,6 +187,9 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
+datarootdir = @datarootdir@
+docdir = @docdir@
+dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 freetype_config = @freetype_config@
 host = @host@
@@ -196,17 +197,21 @@ host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
+htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
+localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
+pdfdir = @pdfdir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
+psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 subdirs = @subdirs@
@@ -220,7 +225,7 @@ libpgwidgets_la_SOURCES = pgbutton.cpp 	pgcheckbutton.cpp 	pgcolumnitem.cpp \
 		pgspinnerbox.cpp 	pgthemewidget.cpp 	pgwidget.cpp 	pgwidgetdnd.cpp 	pgwidgetlist.cpp \
 		pgscrollwidget.cpp 	pgwindow.cpp 	pgrichedit.cpp 	pgscrollarea.cpp 	pgmenubar.cpp \
 		pgmultilineedit.cpp 	propstrings_priv.h 	propstrings_priv.cpp 	pgtooltiphelp.cpp \
-		pgpropertyeditor.cpp 
+		pgpropertyeditor.cpp pgcolorselector.cpp
 
 libpgwidgets_la_LIBADD = \
 	$(SIGC_LIBS)
@@ -285,6 +290,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgbutton.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgcheckbutton.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgcolorselector.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgcolumnitem.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgdropdown.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgimage.Plo@am__quote@
