--- a/configure.in
+++ b/configure.in
@@ -23,7 +23,7 @@ AC_PROG_CC
 AC_PROG_CXX
 
 
-
+AdditionalIncludeDir=""
 gcc296test=yes
 AC_ARG_ENABLE( gcc296-detection, [  --disable-gcc296-detection  Do not perform gcc 2.96 detection test .], gcc296test=no )
 if test "$GCC" = yes; then
@@ -158,6 +158,33 @@ ASC requires the SDL_sound library. If you have a distribution supplied
 SDL_sound package installed, perhaps the SDL_sound-devel package is missing.
 If your distribution does not include the SDL_sound library, you can get it
 from http://www.icculus.org/SDL_sound/ ]]))
+
+
+OLDCPPFLAGS=$CPPFLAGS
+
+CPPFLAGS="$CPPFLAGS $SDL_CFLAGS"
+
+AC_CHECK_HEADER( SDL_sound.h,,SDLSOUNDHEADER=no )
+if test "X$SDLSOUNDHEADER" = "Xno" ; then
+  CFLAGS="$CFLAGS -I/usr/local/include/SDL"
+  CPPFLAGS="$CPPFLAGS -I/usr/local/include/SDL"
+  AC_CHECK_HEADER( SDL_sound.h,,SDLSOUNDHEADER2=no )
+  if test "X$SDLSOUNDHEADER2" = "Xno" ; then
+     AC_MSG_ERROR( [[
+Could not locate the the SDL_sound.h header file. Make sure it is available 
+and add its search path to the CPPFLAGS  
+Example:
+   export CPPFLAGS=-I/my/include/directory
+   ./configure
+     ]])
+  else
+     AdditionalIncludeDir="$AdditionalIncludeDir -I/usr/local/include/SDL/"
+     CFLAGS="$CFLAGS $AdditionalIncludeDir"
+  fi
+fi
+     
+CPPFLAGS=$OLDCPPFLAGS
+     
 
 
 #AC_MSG_CHECKING("SDL_mixer.h")
@@ -365,10 +392,10 @@ dnl ***********************************
 
 
 dnl restore old flags settings
-CXXFLAGS="$SAVE_CXXFLAGS $FREETYPE_CFLAGS"
+CXXFLAGS="$SAVE_CXXFLAGS $FREETYPE_CFLAGS $AdditionalIncludeDir"
 
 
-CFLAGS=$SAVE_CFLAGS
+CFLAGS="$SAVE_CFLAGS $AdditionalIncludeDir"
 LIBS=$SAVE_LIBS
 
 
