--- a/source/unix/Makefile.in
+++ b/source/unix/Makefile.in
@@ -119,6 +119,7 @@ PARAGUI_CFLAGS = @PARAGUI_CFLAGS@
 PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PBPED = @PBPED@
 PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
@@ -180,7 +181,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = asc mapeditor
+SUBDIRS = asc mapeditor @PBPED@
 all: all-recursive
 
 .SUFFIXES:
