--- a/configure.in
+++ b/configure.in
@@ -168,6 +168,10 @@ AC_CHECK_HEADER( SDL_sound.h,,SDLSOUNDHEADER=no )
 if test "X$SDLSOUNDHEADER" = "Xno" ; then
   CFLAGS="$CFLAGS -I/usr/local/include/SDL"
   CPPFLAGS="$CPPFLAGS -I/usr/local/include/SDL"
+
+  dnl AC_CHECK_HEADER caches the result, so we must make it forget to do a new test 
+  unset ac_cv_header_SDL_sound_h
+ 
   AC_CHECK_HEADER( SDL_sound.h,,SDLSOUNDHEADER2=no )
   if test "X$SDLSOUNDHEADER2" = "Xno" ; then
      AC_MSG_ERROR( [[
