--- a/source/unix/pbpedit/Makefile.in
+++ b/source/unix/pbpedit/Makefile.in
@@ -109,6 +109,7 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BOOST_LIBS = @BOOST_LIBS@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
@@ -128,8 +129,12 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+EXPAT_INCLUDE = @EXPAT_INCLUDE@
+EXPAT_LIB = @EXPAT_LIB@
+EXPAT_SUBDIR = @EXPAT_SUBDIR@
 F77 = @F77@
 FFLAGS = @FFLAGS@
+FREETYPE_LIBS = @FREETYPE_LIBS@
 GENCL = @GENCL@
 GENCLL = @GENCLL@
 GREP = @GREP@
@@ -140,7 +145,9 @@ INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDADDLIBBZ2 = @LDADDLIBBZ2@
 LDFLAGS = @LDFLAGS@
 LIBBZ2 = @LIBBZ2@
+LIBEXPAT = @LIBEXPAT@
 LIBOBJS = @LIBOBJS@
+LIBPHYSFS = @LIBPHYSFS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
@@ -159,10 +166,12 @@ PACKAGE_STRING = @PACKAGE_STRING@
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PARAGUI_CFLAGS = @PARAGUI_CFLAGS@
-PARAGUI_CONFIG = @PARAGUI_CONFIG@
 PARAGUI_LIBS = @PARAGUI_LIBS@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PBPED = @PBPED@
+PHYSFS_INCLUDE = @PHYSFS_INCLUDE@
+PHYSFS_LIB = @PHYSFS_LIB@
+PHYSFS_SUBDIR = @PHYSFS_SUBDIR@
 PKG_CONFIG = @PKG_CONFIG@
 RANLIB = @RANLIB@
 SDL_CFLAGS = @SDL_CFLAGS@
@@ -199,6 +208,7 @@ datarootdir = @datarootdir@
 docdir = @docdir@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
+freetype_config = @freetype_config@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
@@ -221,6 +231,7 @@ program_transform_name = @program_transform_name@
 psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
+subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 MAINTAINERCLEANFILES = Makefile.in
