Rewrote New Message Dialog

--- a/source/widgets/Makefile.in
+++ b/source/widgets/Makefile.in
@@ -49,7 +49,8 @@ CONFIG_CLEAN_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libwidgets_la_DEPENDENCIES =
 am_libwidgets_la_OBJECTS = textrenderer.lo bargraphwidget.lo \
-	dropdownselector.lo multilistbox.lo autoprogressbar.lo
+	dropdownselector.lo multilistbox.lo autoprogressbar.lo \
+	playerselector.lo
 libwidgets_la_OBJECTS = $(am_libwidgets_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -204,7 +205,7 @@ target_alias = @target_alias@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS) 
 noinst_LTLIBRARIES = libwidgets.la 
-libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp
+libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp
 libwidgets_la_LIBADD = @SDL_LIBS@
 all: all-am
 
@@ -261,6 +262,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bargraphwidget.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dropdownselector.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multilistbox.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/playerselector.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textrenderer.Plo@am__quote@
 
 .cpp.o:
