Bugfixes  New Message-Editord

--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -587,6 +587,12 @@
 					RelativePath="..\..\..\widgets\multilistbox.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\widgets\playerselector.cpp">
+				</File>
+				<File
+					RelativePath="..\..\..\widgets\targetcoordinatelocator.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\widgets\textrenderer.cpp">
 				</File>
 			</Filter>
