--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -482,6 +482,9 @@
 					RelativePath="..\..\..\widgets\multilistbox.cpp">
 				</File>
 				<File
+					RelativePath="..\..\..\widgets\targetcoordinatelocator.cpp">
+				</File>
+				<File
 					RelativePath="..\..\..\widgets\textrenderer.cpp">
 				</File>
 			</Filter>
