Fixed compilation problem

--- a/source/widgets/Makefile.in
+++ b/source/widgets/Makefile.in
@@ -50,7 +50,7 @@ LTLIBRARIES = $(noinst_LTLIBRARIES)
 libwidgets_la_DEPENDENCIES =
 am_libwidgets_la_OBJECTS = textrenderer.lo bargraphwidget.lo \
 	dropdownselector.lo multilistbox.lo autoprogressbar.lo \
-	playerselector.lo
+	playerselector.lo targetcoordinatelocator.lo
 libwidgets_la_OBJECTS = $(am_libwidgets_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -205,7 +205,7 @@ target_alias = @target_alias@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS) 
 noinst_LTLIBRARIES = libwidgets.la 
-libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp
+libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp targetcoordinatelocator.cpp 
 libwidgets_la_LIBADD = @SDL_LIBS@
 all: all-am
 
@@ -263,6 +263,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/dropdownselector.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/multilistbox.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/playerselector.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/targetcoordinatelocator.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/textrenderer.Plo@am__quote@
 
 .cpp.o:
