--- a/configure.in
+++ b/configure.in
@@ -590,13 +590,9 @@ railstations2.map *.raw *.fnt \
 dnl what gehts packed into main.con (the data container file)
 AC_SUBST([MAINCONDATA])
 
-AC_MSG_CHECKING("music files")
-missingmusic=`./checkfordata.pl data/music/frontiers.ogg data/music/time_to_strike.ogg data/music/machine_wars.ogg`
-if test "x$missingmusic" = x ; then
-  AC_MSG_RESULT("yes")
+AC_CHECK_FILES( data/music/frontiers.ogg data/music/time_to_strike.ogg data/music/machine_wars.ogg,,missingmusic=x )
+if test "x$missingmusic" != xx ; then
   MUSICDIR=music
-else
-  AC_MSG_RESULT("no")
 fi
 
 AC_SUBST([MUSICDIR])
@@ -672,11 +668,11 @@ AC_SUBST(PARAGUI_LIBS)
    
    
    
-if test "x$missingmusic" != x ; then
+if test "x$missingmusic" == xx ; then
   AC_MSG_WARN( [ 
-The following music files could not be found: $missingmusic .
-The music files are not distributed together with the source code because 
-of their size. ASC can run without the music files being present, this message
+The music files could not be found. These are not distributed together with the 
+source code because of their size. 
+ASC can run without the music files being present, this message
 is just to inform you about the existence of the music.
 
 You can download the music files by calling the ./getmusic script and 
