Fixed Makefiles, MultilineEdit

--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -536,7 +536,7 @@ uninstall-info: uninstall-info-recursive
 	uninstall-pkgdataDATA
 
 
-main.con: @MAINCONDATA@
+main.con: @MAINCONDATA@ icons/*.png icons/*.ascgui sounds/*.wav sounds/*.ogg sounds/*.asctxt
 	../source/tools/linux/asc_mount @MAINCONDATA@ icons/*.png icons/*.ascgui sounds/*.wav sounds/*.ogg sounds/*.asctxt main.con
 
 clean-local:
